[gd_scene load_steps=8 format=3 uid="uid://dr535koocgyhs"]

[ext_resource type="Script" path="res://Scripts/micro_wave_game.gd" id="1_1elcm"]
[ext_resource type="Script" path="res://Scenes/hand.gd" id="1_fo7yf"]
[ext_resource type="Texture2D" uid="uid://chx1k8vd7o3i5" path="res://Sprites/HandPlaceHolder.png" id="2_2xs47"]
[ext_resource type="Texture2D" uid="uid://cv2pgubq5pxdj" path="res://Sprites/MicroPlaceholder.png" id="3_bqxd7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqwhi"]
radius = 53.125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h40j8"]
size = Vector2(90, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_aq1d2"]
radius = 52.4349

[node name="MicroWaveGame" type="Node2D"]
script = ExtResource("1_1elcm")

[node name="Microwave button" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(520, 256)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(555, 238)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(585, 262)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(584, 299)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(550, 314)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Microwave button"]
z_index = 1
position = Vector2(519, 294)
scale = Vector2(0.32, 0.32)
shape = SubResource("CircleShape2D_pqwhi")

[node name="Microwave button2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Microwave button2"]
z_index = 1
position = Vector2(550, 149)
shape = SubResource("RectangleShape2D_h40j8")

[node name="MicroButton" type="Button" parent="Microwave button2"]
z_index = 1
offset_left = 503.0
offset_top = 134.0
offset_right = 559.0
offset_bottom = 165.0
scale = Vector2(1.63999, 0.960002)
disabled = true
text = "START"

[node name="HAND" type="CharacterBody2D" parent="."]
position = Vector2(441, 324)
scale = Vector2(0.84, 0.84)
script = ExtResource("1_fo7yf")

[node name="HAND" type="Sprite2D" parent="HAND"]
z_index = 1
position = Vector2(-3.63304e-05, 60.7142)
texture = ExtResource("2_2xs47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HAND"]
top_level = true
z_index = 1
position = Vector2(442, 279)
shape = SubResource("CircleShape2D_aq1d2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -83.0
offset_top = 11.0
offset_right = 1069.0
offset_bottom = 659.0
scale = Vector2(0.76, 0.76)
texture = ExtResource("3_bqxd7")

[node name="Buttontimer1" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="mouse_entered" from="Microwave button" to="." method="_on_microwave_button_mouse_entered"]
[connection signal="timeout" from="Buttontimer1" to="." method="_on_buttontimer_1_timeout"]
